<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#f0f8ff">

    <LinearLayout
        android:id="@+id/city_row"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp">

        <TextView android:id="@+id/city_tag"
                  android:textSize="18sp"
                  android:textStyle="bold"
                  android:textColor="#0000FF"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="City:"/>

        <TextView
            android:id="@+id/city_text"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/temperature_row"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp">

        <TextView android:id="@+id/temperature_tag"
                  android:textSize="18sp"
                  android:textStyle="bold"
                  android:textColor="#0000FF"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="Temperature:"/>

        <TextView
            android:id="@+id/temperature_text"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/weather_row"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp">

        <TextView android:id="@+id/weather_tag"
                  android:textSize="18sp"
                  android:textStyle="bold"
                  android:textColor="#0000FF"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="Weather:"/>

        <TextView
            android:id="@+id/weather_text"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wind_row"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp">

        <TextView android:id="@+id/wind_tag"
                  android:textSize="18sp"
                  android:textStyle="bold"
                  android:textColor="#0000FF"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="Wind:"/>

        <TextView
            android:id="@+id/wind_text"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/feels_like_row"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp">

        <TextView android:id="@+id/feels_like_tag"
                  android:textSize="18sp"
                  android:textStyle="bold"
                  android:textColor="#0000FF"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="Feels Like:"/>

        <TextView
            android:id="@+id/feels_like_text"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/player_buttons_row"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/previous_button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:text="@string/previous_button_text"/>

        <Button
            android:id="@+id/play_button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:text="@string/play_button_text"/>

        <Button
            android:id="@+id/pause_button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:text="@string/pause_button_text"/>

        <Button
            android:id="@+id/next_button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:text="@string/next_button_text"/>

    </LinearLayout>

    <Button
        android:id="@+id/spotify_playlist_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/spotify_playlist_button_text"/>

</LinearLayout>